# ball_game

./: CMakeLists.txt  Dockerfile  README.md  go.sh
src/: CMakeLists.txt  main.cpp
src/object/: ball.cpp  vector_balls.cpp
src/object/include/: ball.hpp  vector_balls.hpp
src/window/: window.cpp
src/window/include/: window.hpp
